hotmoka/io-takamaka-examples/src/main/java/io/takamaka/tests/errors/entryonnoncontract/C.java
package io.takamaka.tests.errors.entryonnoncontract;

import io.takamaka.code.lang.Entry;

public class C {
	public @Entry void m() {}
}